--- a/core/gleaner-tracker-java/pom.xml
+++ b/core/gleaner-tracker-java/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>es.e-ucm.gleaner</groupId>
 		<artifactId>base</artifactId>
-		<version>0.1</version>
+        <version>0.2-SNAPSHOT</version>
 		<relativePath>../../</relativePath>
 	</parent>
 
@@ -29,43 +29,5 @@
 			<artifactId>gleaner-network-java</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-        <!-- Test -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-            <version>4.4</version>
-            <scope>test</scope>
-		</dependency>
-        <dependency>
-            <groupId>org.easymock</groupId>
-            <artifactId>easymock</artifactId>
-            <version>3.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-module-junit4</artifactId>
-            <version>${powermock.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-easymock</artifactId>
-            <version>${powermock.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <!-- Requierd by powermock -->
-        <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
-            <version>2.2.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.objenesis</groupId>
-            <artifactId>objenesis</artifactId>
-            <version>1.2</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 </project>
