--- a/core/gleaner-tracker/pom.xml
+++ b/core/gleaner-tracker/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>es.e-ucm.gleaner</groupId>
 		<artifactId>base</artifactId>
-		<version>0.1</version>
+        <version>0.2-SNAPSHOT</version>
 		<relativePath>../../</relativePath>
 	</parent>
 	
