--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,25 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+            <!-- Java formatter -->
+            <plugin>
+                <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
+                <artifactId>maven-java-formatter-plugin</artifactId>
+                <configuration>
+                    <compilerCompliance>${java.version}</compilerCompliance>
+                    <compilerSource>${java.version}</compilerSource>
+                    <configFile>${project.parent.basedir}/eclipse-formatter.xml</configFile>
+                    <lineEnding>KEEP</lineEnding>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>format</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -117,25 +136,13 @@
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.12.4</version>
-					<dependencies>
-						<dependency>
-							<groupId>org.apache.maven.surefire</groupId>
-							<artifactId>surefire-junit3</artifactId>
-							<version>2.12.4</version>
-						</dependency>
-					</dependencies>
-					<configuration>
-						<excludes>
-							<exclude>**/*GWTTest.java</exclude>
-						</excludes>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
 				</plugin>
+                <plugin>
+                    <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
+                    <artifactId>maven-java-formatter-plugin</artifactId>
+                    <version>0.4</version>
+                </plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
