Extracted xapi to xapi-gwt

--- a/pom.xml
+++ b/pom.xml
@@ -1,99 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>es.e-ucm.gleaner</groupId>
-	<artifactId>base</artifactId>
-	<version>0.4-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<!-- ===================================================================== -->
-	<!-- PROJECT INFO -->
-	<!-- ===================================================================== -->
-	<name>Gleaner Tracker</name>
-	<description>
-		Gleaner tracker implementation
-	</description>
-	<url>http://github.com/anserran/gleaner-tracker</url>
-	<inceptionYear>2012</inceptionYear>
-	<licenses>
-		<license>
-			<name>LGPL v3.0</name>
-			<url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
-			<distribution>manual</distribution>
-			<comments>GNU Lesser Public License v3.0</comments>
-		</license>
-	</licenses>
-	<issueManagement>
-		<system>github</system>
-		<url>https://github.com/anserran/gleaner-tracker/issues</url>
-	</issueManagement>
-	<organization>
-		<name>e-UCM Research Team</name>
-		<url>http://www.e-ucm.es</url>
-	</organization>
-	<developers>
-		<developer>
-			<id>anserran</id>
-			<name>Ángel Serrano Laguna</name>
-			<email>angelserranolaguna@gmail.com</email>
-			<url>http://www.metafisicainformatica.com/</url>
-			<organization>e-UCM Research Team</organization>
-			<organizationUrl>http://www.e-ucm.es</organizationUrl>
-			<roles>
-				<role>project lead</role>
-				<role>architect</role>
-				<role>developer</role>
-			</roles>
-			<timezone>+1</timezone>
-		</developer>
-	</developers>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>es.e-ucm.gleaner</groupId>
+    <artifactId>base</artifactId>
+    <version>0.4-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <!-- ===================================================================== -->
+    <!-- PROJECT INFO -->
+    <!-- ===================================================================== -->
+    <name>Gleaner Tracker</name>
+    <description>
+        Gleaner tracker implementation
+    </description>
+    <url>http://github.com/anserran/gleaner-tracker</url>
+    <inceptionYear>2012</inceptionYear>
+    <licenses>
+        <license>
+            <name>LGPL v3.0</name>
+            <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
+            <distribution>manual</distribution>
+            <comments>GNU Lesser Public License v3.0</comments>
+        </license>
+    </licenses>
+    <issueManagement>
+        <system>github</system>
+        <url>https://github.com/anserran/gleaner-tracker/issues</url>
+    </issueManagement>
+    <organization>
+        <name>e-UCM Research Team</name>
+        <url>http://www.e-ucm.es</url>
+    </organization>
+    <developers>
+        <developer>
+            <id>anserran</id>
+            <name>Ángel Serrano Laguna</name>
+            <email>angelserranolaguna@gmail.com</email>
+            <url>http://www.metafisicainformatica.com/</url>
+            <organization>e-UCM Research Team</organization>
+            <organizationUrl>http://www.e-ucm.es</organizationUrl>
+            <roles>
+                <role>project lead</role>
+                <role>architect</role>
+                <role>developer</role>
+            </roles>
+            <timezone>+1</timezone>
+        </developer>
+    </developers>
 
-	<scm>
-		<connection>scm:git:git://github.com/anserran/gleaner.git</connection>
-		<url>scm:git:git://github.com/anserran/gleaner.git</url>
-		<developerConnection>scm:git:git://github.com/anserran/gleaner.git</developerConnection>
-	</scm>
+    <scm>
+        <connection>scm:git:git://github.com/anserran/gleaner.git</connection>
+        <url>scm:git:git://github.com/anserran/gleaner.git</url>
+        <developerConnection>scm:git:git://github.com/anserran/gleaner.git</developerConnection>
+    </scm>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<gwt.version>2.6.0</gwt.version>
-		<junit.version>4.10</junit.version>
-	</properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <gwt.version>2.6.0</gwt.version>
+        <junit.version>4.10</junit.version>
+    </properties>
 
-	<!-- ===================================================================== -->
-	<!-- BUILD PROFILES -->
-	<!-- ===================================================================== -->
-	<profiles>
-		<profile>
-			<id>build</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<modules>
-				<module>network</module>
-				<module>network-java</module>
-				<module>network-gwt</module>
-				<module>tracker</module>
-				<module>tracker-java</module>
-				<module>tracker-gwt</module>
-				<module>xapi</module>
-			</modules>
-		</profile>
-	</profiles>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
+    <!-- ===================================================================== -->
+    <!-- BUILD PROFILES -->
+    <!-- ===================================================================== -->
+    <profiles>
+        <profile>
+            <id>build</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <modules>
+                <module>network</module>
+                <module>network-java</module>
+                <module>network-gwt</module>
+                <module>tracker</module>
+                <module>tracker-java</module>
+                <module>tracker-gwt</module>
+                <!--
+                <module>xapi</module>
+                <module>xapi-gwt</module>
+                -->
+            </modules>
+        </profile>
+    </profiles>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
             <!-- Java formatter -->
             <plugin>
                 <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
@@ -113,122 +117,122 @@
                     </execution>
                 </executions>
             </plugin>
-		</plugins>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-source-plugin</artifactId>
-					<version>2.1.2</version>
-					<executions>
-						<execution>
-							<id>attach-sources</id>
-							<phase>package</phase>
-							<goals>
-								<goal>jar</goal>
-							</goals>
-						</execution>
-					</executions>
-					<configuration>
-						<excludeResources>true</excludeResources>
-						<attach>true</attach>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-release-plugin</artifactId>
-				</plugin>
+        </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.1.2</version>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <excludeResources>true</excludeResources>
+                        <attach>true</attach>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                </plugin>
                 <plugin>
                     <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
                     <artifactId>maven-java-formatter-plugin</artifactId>
                     <version>0.4</version>
                 </plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
-	<!-- ====================================================================== -->
-	<!-- DISTRIBUTION MANAGEMENT -->
-	<!-- ====================================================================== -->
-	<distributionManagement>
-		<repository>
-			<id>sonatype-nexus-staging</id>
-			<name>Nexus Release Repository</name>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-		</repository>
-		<snapshotRepository>
-			<id>sonatype-nexus-snapshots</id>
-			<name>Sonatype Nexus Snapshots</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
+            </plugins>
+        </pluginManagement>
+    </build>
+    <!-- ====================================================================== -->
+    <!-- DISTRIBUTION MANAGEMENT -->
+    <!-- ====================================================================== -->
+    <distributionManagement>
+        <repository>
+            <id>sonatype-nexus-staging</id>
+            <name>Nexus Release Repository</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+        <snapshotRepository>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Sonatype Nexus Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 
-	<!-- ====================================================================== -->
-	<!-- R E P O S I T O R I E S -->
-	<!-- ====================================================================== -->
-	<repositories>
-		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-			<layout>default</layout>
-		</repository>
-		<repository>
-			<id>snapshot-repository.java.net</id>
-			<name>Java.net Snapshot Repository for Maven</name>
-			<url>https://maven.java.net/content/repositories/snapshots/</url>
-			<layout>default</layout>
-		</repository>
-	</repositories>
+    <!-- ====================================================================== -->
+    <!-- R E P O S I T O R I E S -->
+    <!-- ====================================================================== -->
+    <repositories>
+        <repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>http://download.java.net/maven/2/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>snapshot-repository.java.net</id>
+            <name>Java.net Snapshot Repository for Maven</name>
+            <url>https://maven.java.net/content/repositories/snapshots/</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
 
-	<!-- ====================================================================== -->
-	<!-- D E P E N D E N C I E S -->
-	<!-- ====================================================================== -->
-	<dependencyManagement>
-		<dependencies>
-			<!-- Jersey -->
-			<dependency>
-				<groupId>com.sun.jersey</groupId>
-				<artifactId>jersey-server</artifactId>
-				<version>1.12</version>
-			</dependency>
-			<dependency>
-				<groupId>com.sun.jersey</groupId>
-				<artifactId>jersey-client</artifactId>
-				<version>1.12</version>
-			</dependency>
-			<dependency>
-				<groupId>com.sun.jersey</groupId>
-				<artifactId>jersey-json</artifactId>
-				<version>1.12</version>
-			</dependency>
-			<!-- JSON -->
-			<dependency>
-				<groupId>org.json</groupId>
-				<artifactId>json</artifactId>
-				<version>20090211</version>
-			</dependency>
-			<!-- GSON -->
-			<dependency>
-				<groupId>com.google.code.gson</groupId>
-				<artifactId>gson</artifactId>
-				<version>2.1</version>
-			</dependency>
-			<!-- GWT -->
-			<dependency>
-				<groupId>com.google.gwt</groupId>
-				<artifactId>gwt-user</artifactId>
-				<version>${gwt.version}</version>
-				<scope>provided</scope>
-			</dependency>
+    <!-- ====================================================================== -->
+    <!-- D E P E N D E N C I E S -->
+    <!-- ====================================================================== -->
+    <dependencyManagement>
+        <dependencies>
+            <!-- Jersey -->
+            <dependency>
+                <groupId>com.sun.jersey</groupId>
+                <artifactId>jersey-server</artifactId>
+                <version>1.12</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.jersey</groupId>
+                <artifactId>jersey-client</artifactId>
+                <version>1.12</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.jersey</groupId>
+                <artifactId>jersey-json</artifactId>
+                <version>1.12</version>
+            </dependency>
+            <!-- JSON -->
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>20090211</version>
+            </dependency>
+            <!-- GSON -->
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.1</version>
+            </dependency>
+            <!-- GWT -->
+            <dependency>
+                <groupId>com.google.gwt</groupId>
+                <artifactId>gwt-user</artifactId>
+                <version>${gwt.version}</version>
+                <scope>provided</scope>
+            </dependency>
 
-			<!-- JUnit -->
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>${junit.version}</version>
-				<scope>test</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+            <!-- JUnit -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
